correct selector component sizing. the icons got too big and out of space at first.

--- a/src/components/selector/selector.css
+++ b/src/components/selector/selector.css
@@ -1,6 +1,7 @@
 .selector {
   border: 3px solid rgb(67, 67, 67);
   height: 65vh;
+  min-height: fit-content;
   width: 30vw;
   border-radius: 25px;
   padding: 1vh;
@@ -19,7 +20,12 @@
 }
 .selector-img-icon {
   order: 1;
-  width: 5.5vw;
+  height: 5.5vw;
+  width: auto;
+  max-height: 80px;
+  max-width: 80px;
+  /* height: 5.5vw; */
+  /* max-height: 5.9vw; */
   border-radius: 50%;
   padding: 0 1px;
 }
